button profile fixed

--- a/components/Create/Step2/step2.module.css
+++ b/components/Create/Step2/step2.module.css
@@ -309,6 +309,11 @@
   .part {
     margin-top: 2rem;
   }
+
+  .input_label {
+    flex-wrap: wrap;
+    white-space: wrap;
+  }
 }
 
 @media screen and (max-width: 750px) {
