--- a/components/Detail/Creatie/creatie.module.css
+++ b/components/Detail/Creatie/creatie.module.css
@@ -307,7 +307,7 @@
     margin: 0;
     z-index: 2;
     margin-top: 10rem;
-    padding-bottom: 20rem;
+    padding-bottom: 10rem;
   }
 
   .locked_icon {
@@ -453,5 +453,14 @@
 @media screen and (max-width: 450px) {
   .locked_content {
     margin-left: 1rem;
+  }
+
+  .form_card {
+    height: 22rem;
+    width: 100%;
+    position: relative;
+    margin: 5rem 1rem;
+    grid-column-gap: 1rem;
+    padding: 1rem;
   }
 }
