--- a/components/Detail/Crowdfunding/crowdfunding.module.css
+++ b/components/Detail/Crowdfunding/crowdfunding.module.css
@@ -495,6 +495,47 @@
     height: 100%;
     justify-content: flex-start;
   }
+
+  .start {
+    margin: 0;
+    flex-direction: column;
+    padding: 0;
+    z-index: 2;
+    width: 100%;
+    margin-top: 15rem;
+  }
+
+  .locked_icon {
+    position: unset;
+    top: 50%;
+    margin-top: 2rem;
+  }
+
+  .locked_content {
+    margin-top: auto;
+    margin-bottom: 0;
+  }
+
+  .donation_progress {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    margin-left: 0;
+    margin-bottom: 2rem;
+  }
+
+  .progressbar {
+    width: 45%;
+    height: 0.5rem;
+    margin-right: 1rem;
+    margin: 1rem 0;
+  }
+
+  .progress_points {
+    display: flex;
+    width: 45%;
+    justify-content: space-between;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -547,10 +588,76 @@
   .crowdfunding_value {
     margin-left: 4.8rem;
   }
+
+  .donation_progress {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    margin-left: 7rem;
+    margin-bottom: 2rem;
+  }
+
+  .progressbar {
+    width: 80%;
+    height: 0.5rem;
+    margin-right: 1rem;
+    margin: 1rem 0;
+  }
+
+  .progress_points {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+  }
+
+  .start {
+    flex-direction: row;
+    position: relative;
+    align-items: flex-end;
+    width: 100%;
+    height: auto;
+    margin: 5rem 0;
+    padding: 0;
+    justify-content: flex-start;
+  }
+
+  .locked_icon {
+    margin: auto 0;
+    position: relative;
+    align-self: unset;
+    top: unset;
+    left: unset;
+  }
+
+  .locked_type {
+    text-align: left;
+  }
+
+  .locked_content {
+    flex-direction: column;
+    position: relative;
+    bottom: unset;
+    align-self: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0;
+    margin-left: 2rem;
+  }
+
+  .locked_date {
+    text-align: left;
+  }
 }
 
 @media screen and (max-width: 450px) {
   .part_title {
     margin-left: 5rem;
+  }
+  .donation_progress {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    margin-left: 5rem;
+    margin-bottom: 2rem;
   }
 }
