--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,7 @@ a {
 }
 
 .line_value {
-  width: 60vw;
+  width: 72rem;
   height: 0.3rem;
   margin: 0 auto;
   position: absolute;
@@ -391,25 +391,25 @@ a {
 }
 
 .line_value.progress_active_realisation .line_color {
-  width: 60vw;
+  width: 72rem;
   height: 0.3rem;
   background-color: var(--colorBlue);
 }
 
 .line_value.progress_active_creation .line_color {
-  width: 26.5vw;
+  width: 30rem;
   height: 0.3rem;
   background-color: var(--colorBlue);
 }
 
 .line_value.progress_active_crowdfund .line_color {
-  width: 40vw;
+  width: 47.5rem;
   height: 0.3rem;
   background-color: var(--colorBlue);
 }
 
 .line_value.progress_active_concept .line_color {
-  width: 10vw;
+  width: 10rem;
   height: 0.3rem;
   background-color: var(--colorBlue);
 }
